Cambio de vesion java
- Se cambia la versión de java 11 a 8.2
- Correcciones de código no soportado por java 8.2